--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^2.0.9",
     "astro-tooltips": "^0.6.2",
     "tailwindcss": "^3.2.6"
+  },
+  "devDependencies": {
+    "swup": "^3.0.5"
   }
 }
