--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "tailwindcss": "^3.2.6"
   },
   "devDependencies": {
+    "@swup/a11y-plugin": "^3.0.0",
+    "@swup/head-plugin": "^1.3.0",
+    "@swup/slide-theme": "^1.0.5",
     "swup": "^3.0.5"
   }
 }
