--- a/src/constants/personal_projects.json
+++ b/src/constants/personal_projects.json
@@ -58,6 +58,28 @@
     "github_url": "https://github.com/ricafolio/orangey-vscode-theme"
   },
   {
+    "img_file_name": "horizon",
+    "label": {
+      "text": "Extension Project",
+      "color": "lime"
+    },
+    "title": "Horizon Muted",
+    "description": "A modified fork of Horizon Theme for VSCode, featuring a muted color palette",
+    "tools": [
+      {
+        "id": "vscode",
+        "name": "Visual Studio Code API"
+      },
+      {
+        "id": "package",
+        "name": "Package"
+      }
+    ],
+    "url": "https://marketplace.visualstudio.com/items?itemName=ricafolio.horizon-muted",
+    "url_text": "Download extension",
+    "github_url": "https://github.com/ricafolio/horizon-muted"
+  },
+  {
     "img_file_name": "mml",
     "label": {
       "text": "[IN PROGRESS] Full Stack Project",
