--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^2.2.4",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.18",
     "tailwindcss": "^3.4.3"
