--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.7.10",
     "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "prettier": "3.5.3",
+    "prettier-plugin-astro": "0.14.1"
   }
 }
