--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "format": "npx prettier . --write",
     "astro": "astro"
   },
   "dependencies": {
